# rating-update

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  generate_steam_token.py  init.sql  nginx-example.conf  notes.txt  reset.sql
benches/: bench.rs
docs/: api.md  modified-glicko.md
src/: .rater.rs.rustfmt  api.rs  ggst_api.rs  glicko.rs  lib.rs  main.rs  rater.rs  requests.rs  responses.rs  steam_token.txt  website.rs
static/: 404.html  500.html  503.html  glicko_calculator.js  index.html  scripts.js  style.css  styles.css  styles.css.map  styles.scss
templates/: about.html.hbs  character_popularity.html.hbs  footer.html.hbs  header.html.hbs  index.html.hbs  matchups.html.hbs  metadata.html.hbs  navbar.html.hbs  player.html.hbs  player_char.html.hbs  player_char_history.html.hbs  player_distribution.html.hbs  player_link.html.hbs  rating_calculator.html.hbs  search_form.html.hbs  search_results.html.hbs  stats.html.hbs  supporters.html.hbs  top_100.html.hbs  top_100_char.html.hbs
