[package]
name = "rating-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
#glicko2 = "0.3.1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["sqlite_pool"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", default-features = false, features = ["handlebars"] }
ggst-api = { git = "https://github.com/halvnykterist/ggst-api-rs" }
#ggst-api = { path = "../ggst-api-rs" }
tokio = { version = "1", features=["full"] }
rusqlite = { version = "0.25", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
glob = "0.3"
chrono = "0.4"
simplelog = "0.9"
log = "0.4"
fxhash = "0.2"
num-format = "0.4"
all_asserts = "2.3.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
futures = "0.3"
reqwest = "0.11"

[[bench]]
name = "bench"
harness = false


[profile.bench]
debug = 1
